AntlrProd/ANTLR/YAULCompilerProd/src/antlr/YaulParser.java
// Generated from Yaul.g4 by ANTLR 4.10.1

    package antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class YaulParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, WRITE=9, 
		SEMICOLON=10, ID=11, NUM=12, MATRIX=13, INT_TYPE=14, MATRIX_TYPE=15, COMMENT=16, 
		WS=17, TRANSPOSE=18;
	public static final int
		RULE_prog = 0, RULE_function = 1, RULE_decl = 2, RULE_expr = 3, RULE_writeExpressions = 4, 
		RULE_writeNormals = 5;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "function", "decl", "expr", "writeExpressions", "writeNormals"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "'='", "','", "'*'", "'/'", "'+'", "'-'", "'WRITE'", 
			"';'", null, null, null, null, null, null, null, "'^'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "WRITE", "SEMICOLON", 
			"ID", "NUM", "MATRIX", "INT_TYPE", "MATRIX_TYPE", "COMMENT", "WS", "TRANSPOSE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Yaul.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public YaulParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	 
		public ProgContext() { }
		public void copyFrom(ProgContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ProgramContext extends ProgContext {
		public TerminalNode EOF() { return getToken(YaulParser.EOF, 0); }
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public ProgramContext(ProgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YaulVisitor ) return ((YaulVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			_localctx = new ProgramContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(13); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(12);
				function();
				}
				}
				setState(15); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(17);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
	 
		public FunctionContext() { }
		public void copyFrom(FunctionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FunctionDeclarationContext extends FunctionContext {
		public TerminalNode ID() { return getToken(YaulParser.ID, 0); }
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<WriteExpressionsContext> writeExpressions() {
			return getRuleContexts(WriteExpressionsContext.class);
		}
		public WriteExpressionsContext writeExpressions(int i) {
			return getRuleContext(WriteExpressionsContext.class,i);
		}
		public List<WriteNormalsContext> writeNormals() {
			return getRuleContexts(WriteNormalsContext.class);
		}
		public WriteNormalsContext writeNormals(int i) {
			return getRuleContext(WriteNormalsContext.class,i);
		}
		public FunctionDeclarationContext(FunctionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).enterFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).exitFunctionDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YaulVisitor ) return ((YaulVisitor<? extends T>)visitor).visitFunctionDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_function);
		int _la;
		try {
			_localctx = new FunctionDeclarationContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(19);
			match(ID);
			setState(20);
			match(T__0);
			setState(25); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(25);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(21);
					decl();
					}
					break;
				case 2:
					{
					setState(22);
					expr(0);
					}
					break;
				case 3:
					{
					setState(23);
					writeExpressions();
					}
					break;
				case 4:
					{
					setState(24);
					writeNormals();
					}
					break;
				}
				}
				setState(27); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WRITE) | (1L << ID) | (1L << NUM) | (1L << INT_TYPE) | (1L << MATRIX_TYPE))) != 0) );
			setState(29);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	 
		public DeclContext() { }
		public void copyFrom(DeclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TransposedMatrixDeclarationContext extends DeclContext {
		public List<TerminalNode> ID() { return getTokens(YaulParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(YaulParser.ID, i);
		}
		public TerminalNode TRANSPOSE() { return getToken(YaulParser.TRANSPOSE, 0); }
		public TerminalNode SEMICOLON() { return getToken(YaulParser.SEMICOLON, 0); }
		public TransposedMatrixDeclarationContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).enterTransposedMatrixDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).exitTransposedMatrixDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YaulVisitor ) return ((YaulVisitor<? extends T>)visitor).visitTransposedMatrixDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclarationMatrixContext extends DeclContext {
		public TerminalNode MATRIX_TYPE() { return getToken(YaulParser.MATRIX_TYPE, 0); }
		public TerminalNode ID() { return getToken(YaulParser.ID, 0); }
		public TerminalNode MATRIX() { return getToken(YaulParser.MATRIX, 0); }
		public TerminalNode SEMICOLON() { return getToken(YaulParser.SEMICOLON, 0); }
		public DeclarationMatrixContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).enterDeclarationMatrix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).exitDeclarationMatrix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YaulVisitor ) return ((YaulVisitor<? extends T>)visitor).visitDeclarationMatrix(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclarationEmptyMatrixContext extends DeclContext {
		public TerminalNode MATRIX_TYPE() { return getToken(YaulParser.MATRIX_TYPE, 0); }
		public TerminalNode SEMICOLON() { return getToken(YaulParser.SEMICOLON, 0); }
		public List<TerminalNode> ID() { return getTokens(YaulParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(YaulParser.ID, i);
		}
		public DeclarationEmptyMatrixContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).enterDeclarationEmptyMatrix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).exitDeclarationEmptyMatrix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YaulVisitor ) return ((YaulVisitor<? extends T>)visitor).visitDeclarationEmptyMatrix(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VariableDeclarationExprMultContext extends DeclContext {
		public TerminalNode MATRIX_TYPE() { return getToken(YaulParser.MATRIX_TYPE, 0); }
		public TerminalNode ID() { return getToken(YaulParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(YaulParser.SEMICOLON, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> TRANSPOSE() { return getTokens(YaulParser.TRANSPOSE); }
		public TerminalNode TRANSPOSE(int i) {
			return getToken(YaulParser.TRANSPOSE, i);
		}
		public VariableDeclarationExprMultContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).enterVariableDeclarationExprMult(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).exitVariableDeclarationExprMult(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YaulVisitor ) return ((YaulVisitor<? extends T>)visitor).visitVariableDeclarationExprMult(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VariableDeclarationExprivisionContext extends DeclContext {
		public TerminalNode MATRIX_TYPE() { return getToken(YaulParser.MATRIX_TYPE, 0); }
		public TerminalNode ID() { return getToken(YaulParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(YaulParser.SEMICOLON, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> TRANSPOSE() { return getTokens(YaulParser.TRANSPOSE); }
		public TerminalNode TRANSPOSE(int i) {
			return getToken(YaulParser.TRANSPOSE, i);
		}
		public VariableDeclarationExprivisionContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).enterVariableDeclarationExprivision(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).exitVariableDeclarationExprivision(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YaulVisitor ) return ((YaulVisitor<? extends T>)visitor).visitVariableDeclarationExprivision(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AlreadyDeclaredMatrixContext extends DeclContext {
		public TerminalNode ID() { return getToken(YaulParser.ID, 0); }
		public TerminalNode MATRIX() { return getToken(YaulParser.MATRIX, 0); }
		public TerminalNode SEMICOLON() { return getToken(YaulParser.SEMICOLON, 0); }
		public AlreadyDeclaredMatrixContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).enterAlreadyDeclaredMatrix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).exitAlreadyDeclaredMatrix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YaulVisitor ) return ((YaulVisitor<? extends T>)visitor).visitAlreadyDeclaredMatrix(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VariableDeclarationExprSubtractionContext extends DeclContext {
		public TerminalNode MATRIX_TYPE() { return getToken(YaulParser.MATRIX_TYPE, 0); }
		public TerminalNode ID() { return getToken(YaulParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(YaulParser.SEMICOLON, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> TRANSPOSE() { return getTokens(YaulParser.TRANSPOSE); }
		public TerminalNode TRANSPOSE(int i) {
			return getToken(YaulParser.TRANSPOSE, i);
		}
		public VariableDeclarationExprSubtractionContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).enterVariableDeclarationExprSubtraction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).exitVariableDeclarationExprSubtraction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YaulVisitor ) return ((YaulVisitor<? extends T>)visitor).visitVariableDeclarationExprSubtraction(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AlreadyDeclaredIntContext extends DeclContext {
		public TerminalNode ID() { return getToken(YaulParser.ID, 0); }
		public TerminalNode NUM() { return getToken(YaulParser.NUM, 0); }
		public TerminalNode SEMICOLON() { return getToken(YaulParser.SEMICOLON, 0); }
		public AlreadyDeclaredIntContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).enterAlreadyDeclaredInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).exitAlreadyDeclaredInt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YaulVisitor ) return ((YaulVisitor<? extends T>)visitor).visitAlreadyDeclaredInt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclarationEmptyIntContext extends DeclContext {
		public TerminalNode INT_TYPE() { return getToken(YaulParser.INT_TYPE, 0); }
		public TerminalNode SEMICOLON() { return getToken(YaulParser.SEMICOLON, 0); }
		public List<TerminalNode> ID() { return getTokens(YaulParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(YaulParser.ID, i);
		}
		public DeclarationEmptyIntContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).enterDeclarationEmptyInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).exitDeclarationEmptyInt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YaulVisitor ) return ((YaulVisitor<? extends T>)visitor).visitDeclarationEmptyInt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclarationContext extends DeclContext {
		public TerminalNode INT_TYPE() { return getToken(YaulParser.INT_TYPE, 0); }
		public TerminalNode ID() { return getToken(YaulParser.ID, 0); }
		public TerminalNode NUM() { return getToken(YaulParser.NUM, 0); }
		public TerminalNode SEMICOLON() { return getToken(YaulParser.SEMICOLON, 0); }
		public DeclarationContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YaulVisitor ) return ((YaulVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VariableDeclarationExprAdditionContext extends DeclContext {
		public TerminalNode MATRIX_TYPE() { return getToken(YaulParser.MATRIX_TYPE, 0); }
		public TerminalNode ID() { return getToken(YaulParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(YaulParser.SEMICOLON, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> TRANSPOSE() { return getTokens(YaulParser.TRANSPOSE); }
		public TerminalNode TRANSPOSE(int i) {
			return getToken(YaulParser.TRANSPOSE, i);
		}
		public VariableDeclarationExprAdditionContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).enterVariableDeclarationExprAddition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).exitVariableDeclarationExprAddition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YaulVisitor ) return ((YaulVisitor<? extends T>)visitor).visitVariableDeclarationExprAddition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decl);
		int _la;
		try {
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,19,_ctx) ) {
			case 1:
				_localctx = new DeclarationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(31);
				match(INT_TYPE);
				setState(32);
				match(ID);
				setState(33);
				match(T__2);
				setState(34);
				match(NUM);
				setState(35);
				match(SEMICOLON);
				}
				break;
			case 2:
				_localctx = new DeclarationMatrixContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(36);
				match(MATRIX_TYPE);
				setState(37);
				match(ID);
				setState(38);
				match(T__2);
				setState(39);
				match(MATRIX);
				setState(40);
				match(SEMICOLON);
				}
				break;
			case 3:
				_localctx = new DeclarationEmptyMatrixContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(41);
				match(MATRIX_TYPE);
				setState(46); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(43);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__3) {
						{
						setState(42);
						match(T__3);
						}
					}

					setState(45);
					match(ID);
					}
					}
					setState(48); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__3 || _la==ID );
				setState(50);
				match(SEMICOLON);
				}
				break;
			case 4:
				_localctx = new AlreadyDeclaredMatrixContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(51);
				match(ID);
				setState(52);
				match(T__2);
				setState(53);
				match(MATRIX);
				setState(54);
				match(SEMICOLON);
				}
				break;
			case 5:
				_localctx = new DeclarationEmptyIntContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(55);
				match(INT_TYPE);
				setState(60); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(57);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__3) {
						{
						setState(56);
						match(T__3);
						}
					}

					setState(59);
					match(ID);
					}
					}
					setState(62); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__3 || _la==ID );
				setState(64);
				match(SEMICOLON);
				}
				break;
			case 6:
				_localctx = new AlreadyDeclaredIntContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(65);
				match(ID);
				setState(66);
				match(T__2);
				setState(67);
				match(NUM);
				setState(68);
				match(SEMICOLON);
				}
				break;
			case 7:
				_localctx = new TransposedMatrixDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(69);
				match(ID);
				setState(70);
				match(T__2);
				setState(71);
				match(ID);
				setState(72);
				match(TRANSPOSE);
				setState(73);
				match(SEMICOLON);
				}
				break;
			case 8:
				_localctx = new VariableDeclarationExprMultContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(74);
				match(MATRIX_TYPE);
				setState(75);
				match(ID);
				setState(76);
				match(T__2);
				{
				setState(77);
				expr(0);
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TRANSPOSE) {
					{
					setState(78);
					match(TRANSPOSE);
					}
				}

				}
				setState(81);
				match(T__4);
				setState(86); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(82);
					expr(0);
					setState(84);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==TRANSPOSE) {
						{
						setState(83);
						match(TRANSPOSE);
						}
					}

					}
					}
					setState(88); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ID || _la==NUM );
				setState(90);
				match(SEMICOLON);
				}
				break;
			case 9:
				_localctx = new VariableDeclarationExprivisionContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(92);
				match(MATRIX_TYPE);
				setState(93);
				match(ID);
				setState(94);
				match(T__2);
				{
				setState(95);
				expr(0);
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TRANSPOSE) {
					{
					setState(96);
					match(TRANSPOSE);
					}
				}

				}
				setState(99);
				match(T__5);
				setState(104); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(100);
					expr(0);
					setState(102);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==TRANSPOSE) {
						{
						setState(101);
						match(TRANSPOSE);
						}
					}

					}
					}
					setState(106); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ID || _la==NUM );
				setState(108);
				match(SEMICOLON);
				}
				break;
			case 10:
				_localctx = new VariableDeclarationExprAdditionContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(110);
				match(MATRIX_TYPE);
				setState(111);
				match(ID);
				setState(112);
				match(T__2);
				{
				setState(113);
				expr(0);
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TRANSPOSE) {
					{
					setState(114);
					match(TRANSPOSE);
					}
				}

				}
				setState(117);
				match(T__6);
				setState(122); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(118);
					expr(0);
					setState(120);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==TRANSPOSE) {
						{
						setState(119);
						match(TRANSPOSE);
						}
					}

					}
					}
					setState(124); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ID || _la==NUM );
				setState(126);
				match(SEMICOLON);
				}
				break;
			case 11:
				_localctx = new VariableDeclarationExprSubtractionContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(128);
				match(MATRIX_TYPE);
				setState(129);
				match(ID);
				setState(130);
				match(T__2);
				{
				setState(131);
				expr(0);
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TRANSPOSE) {
					{
					setState(132);
					match(TRANSPOSE);
					}
				}

				}
				setState(135);
				match(T__7);
				setState(140); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(136);
					expr(0);
					setState(138);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==TRANSPOSE) {
						{
						setState(137);
						match(TRANSPOSE);
						}
					}

					}
					}
					setState(142); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ID || _la==NUM );
				setState(144);
				match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MultiplicationContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public MultiplicationContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).enterMultiplication(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YaulListener ) ((YaulListener)listener).exitMultiplication(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YaulVisitor ) return ((YaulVisitor<? extends T>)visitor).visitMultiplication(this);
